# ConsoleX

./: .gitignore  CMakeLists.txt  DrawApp  ItemApp  Makefile  README.md
example/: main_buffer_test.cpp  main_draw_app.cpp  main_item_app.cpp
include/: ConsoleX.hpp  console_x.h  cx_buffer.hpp  cx_color.hpp  cx_console.h  cx_coord.h  cx_device.hpp  cx_key.h  cx_rgb.h  cx_screen.hpp  cx_util.hpp
src/: cx_buffer.cpp  cx_color.cpp  cx_console.cpp  cx_coord.cpp  cx_device.cpp  cx_key.cpp  cx_rgb.cpp  cx_screen.cpp  cx_util.cpp  main.cpp
